prusti-tests/tests/verify/fail/with-spec/ensures-false.rs
use prusti_contracts::*;

#[ensures(false)] //~ ERROR postcondition
fn main() {
}
